<resources>
    <string name="app_name">Trivia App</string>
    <string name="button">Button</string>
    <string name="exit">Exit</string>
    <string name="start_trivia">Start Trivia</string>
    <string name="welcome_to_trivia_app">Welcome to Trivia App</string>
    <string name="trivia_ready">Trivia Ready</string>
    <string name="Activity2Name">Trivia</string>
    <string name="activity3Name">Trivia Stats</string>
    <string name="your_performance">Your performance:</string>
    <string name="corect_answers">Corect answers</string>
    <string name="finish">Finish</string>
    <string name="textview">TextView</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="loading">Loading</string>
</resources>
